examples/negative/type_errors/L3/13_param_wanted_int.ob
MODULE ParamWantedInt;

VAR y: BOOLEAN;

PROCEDURE FOO (x: INTEGER);
  
  BEGIN
    x := 42;
  END FOO;

BEGIN
  y := TRUE;
  FOO(y);
END ParamWantedInt.
